k8/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: community-mgmt-svc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: community-mgmt-svc
  template:
    metadata:
      labels:
        app: community-mgmt-svc
    spec:
      containers:
        - name: community-mgmt-svc
          image: localhost:5050/community-mgmt-service
          imagePullPolicy: Always
          ports:
            - containerPort: 8084
          readinessProbe:
            httpGet:
              path: /api/community/health
              port: 8084
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /api/community/health
              port: 8084
            initialDelaySeconds: 5
        - name: envoy
          image: envoyproxy/envoy:v1.27.0
          ports:
            - containerPort: 10000
              name: envoy-port
            - containerPort: 9901
              name: envoy-admin
          volumeMounts:
            - name: envoy-config
              mountPath: /etc/envoy
              readOnly: true
          args:
            - "--config-path"
            - "/etc/envoy/envoy.yaml"
      volumes:
        - name: envoy-config
          configMap:
            name: envoy-config
      restartPolicy: Always
---
#Service to Expose Envoy
kind: Service
apiVersion: v1
metadata:
  name: envoy-service
spec:
  type: ClusterIP
  ports:
    - port: 10000
      protocol: TCP
      targetPort: 10000
  selector:
    app: community-mgmt-svc
---
#Service to expose community-mgmt-svc on kubernetes node
kind: Service
apiVersion: v1
metadata:
  name: community-mgmt-svc
spec:
  type: NodePort
  ports:
    - port: 8084
      targetPort: 8084
      protocol: TCP
      nodePort: 31000
  selector:
    app: community-mgmt-svc
---
# ConfigMap for Envoy Configuration
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
data:
  envoy.yaml: |
    static_resources:
      listeners:
        - name: listener_0
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 10000
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    codec_type: AUTO
                    stat_prefix: ingress_http
                    route_config:
                      name: local_route
                      virtual_hosts:
                        - name: local_service
                          domains: ["*"]
                          routes:
                            - match:
                                prefix: "/"
                              route:
                                cluster: service_backend
                    http_filters:
                      - name: envoy.filters.http.router
                        typedConfig:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      clusters:
        - name: service_backend
          connect_timeout: 0.25s
          type: LOGICAL_DNS
          dns_lookup_family: V4_ONLY
          load_assignment:
            cluster_name: service_backend
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: 127.0.0.1
                          port_value: 8084
    admin:
      access_log_path: "/tmp/admin_access.log"
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9901
